# python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README-pypi.md  README.md  TEST_RESULTS.md  pyproject.toml  setup.py  test_sdk_live.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: basic_usage.py  webhook_handler.py
stockalert/: __init__.py  async_client.py  client.py  exceptions.py  logging.py  types.py
stockalert/cli/: main.py
stockalert/resources/: __init__.py  alerts.py  alerts_base.py  api_keys.py  async_alerts.py  async_api_keys.py  async_user.py  async_webhooks.py  base.py  user.py  webhooks.py
tests/: __init__.py  conftest.py  test_alert_types.py  test_client.py  test_client_requests.py  test_resources.py  test_types.py  test_validation.py  test_webhooks.py
