[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockalert"
dynamic = ["version"]
description = "Official Python SDK for StockAlert.pro API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["stockalert", "stocks", "alerts", "trading", "finance", "api", "sdk"]
authors = [
  { name = "StockAlert.pro", email = "support@stockalert.pro" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "requests>=2.25.0",
  "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
async = [
  "httpx>=0.24.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "httpx>=0.24.0",  # For async tests
]

[project.urls]
Documentation = "https://docs.stockalert.pro/sdks/python"
Issues = "https://github.com/stockalert-pro/python-sdk/issues"
Source = "https://github.com/stockalert-pro/python-sdk"

[tool.hatch.version]
path = "stockalert/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/tests",
  "/.gitignore",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.mypy_cache",
  "/htmlcov",
  "/.coverage",
  "/build",
  "/dist",
  "/*.egg-info",
  "/docs",
  "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["stockalert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["stockalert"]
omit = ["*/tests/*", "*/__version__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache", 
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ files

[tool.mypy]
warn_return_any = false
strict_optional = true
